Fix links color to be more contrast

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,4 +1,7 @@
 /* your custom css */
+a {
+  color: #ff9d00;
+}
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
